@@ -248,6 +248,9 @@ INCOMPATIBILITY: e.g. use TVars.empty and TVars.make for immediate
 adoption; better use TVars.add, TVars.add_tfrees etc. for scalable
 accumulation of items.
 
+* ML antiquotations \<^tvar>\<open>?'a::sort\<close> and \<^var>\<open>?x::type\<close> inline
+corresponding ML values, notably as arguments for Thm.instantiate etc.
+
 * The "build" combinators of various data structures help to build
 content from bottom-up, by applying an "add" function the "empty" value.
 For example:
